--- a/pom.xml
+++ b/pom.xml
@@ -4,28 +4,40 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>in.kncsolutions.dhelm.mathcal</groupId>
   <artifactId>dhelm-mathcal</artifactId>
-  <version>1.0.4-SNAPSHOT</version>
+  <version>1.0.4</version>
   <packaging>jar</packaging>
   <name>dhelm-mathcal</name>
- 
- 
- <licenses>
+   <url>https://dhelm.kncsolutions.in</url>
+  
+  <licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	
+   
+    <organization>
+     <name>KNC Solutions Private Limited. </name>
+  </organization>
+
 	
 	<developers>
     <developer>
       <name>Pallav Nandi Chaudhuri</name>
       <email>developer@kncsolutions.in</email>
       <organization>Knc Solutions Private Limited</organization>
-      <organizationUrl>https://www.kncsolutions.in</organizationUrl>
+      <organizationUrl>https://www.dhelm.kncsolutions.in</organizationUrl>
     </developer>
   </developers>
+  
+  <scm>
+    <connection>scm:git:https://github.com/kncsolutions/dhelm-mathcal.git</connection>
+    <developerConnection>scm:git:https://github.com/kncsolutions/dhelm-mathcal.git</developerConnection>
+    <url>https://github.com/kncsolutions/dhelm</url>
+  </scm>
+ 
+ 
  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,4 +56,76 @@
       <version>1.0.3</version>
     </dependency>
   </dependencies>
+  
+  <distributionManagement>
+  <snapshotRepository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </snapshotRepository>
+  <repository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+  </repository>
+</distributionManagement>
+  
+  <build>
+	<plugins>
+   <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+              <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+       <groupId>org.sonatype.plugins</groupId>
+       <artifactId>nexus-staging-maven-plugin</artifactId>
+       <version>1.6.7</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+         <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+           <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+     </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-source-plugin</artifactId>
+      <version>2.2.1</version>
+      <configuration>
+        <forceCreation>true</forceCreation>
+         <includePom>true</includePom>
+        <useDefaultManifestFile>true</useDefaultManifestFile>
+      </configuration>
+      <executions>
+        <execution>
+          <id>attach-sources</id>
+          <goals>
+            <goal>jar-no-fork</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+         <version>3.0.0</version>
+			<executions>
+				<execution>
+					<id>attach-javadocs</id>
+					<goals>
+						<goal>jar</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>           	
+	</plugins>
+	</build>
 </project>
